--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="btnColor">#374256</color>
+    <color name="white">#ffffff</color>
+    <color name="cardColor">#eeeeee</color>
+    <color name="voucherColor">#1a5bf6</color>
+    <color name="productColor">#cf6636</color>
 </resources>
